@@ -4,11 +4,16 @@ import java.util.ArrayList;
 import java.util.Arrays;
 
 public class SDhulb { /*Built not to handle: non UTF-8 source files  */
-    static String vStr = "0.0.0.5"; /*Rightmost: incremented every commit. Second from right: incremented upon feature implementation. Second from left: incremented upon implementation of a set of related features. Leftmost: incremented every breaking change. NO NUMBERS INCREMENTED FROM COMMITS CONSISTING OF COMMENTS EXCLUSIVELY */
+    static String vStr = "0.0.0.6"; /*Rightmost: incremented every commit. Second from right: incremented upon feature implementation. Second from left: incremented upon implementation of a set of related features. Leftmost: incremented every breaking change. NO NUMBERS INCREMENTED FROM COMMITS CONSISTING OF COMMENTS EXCLUSIVELY */
+
+    /*addr is same size as int
+     * *x = addr*x
+    */
     public static ArrayList<String> typlst = new ArrayList<>();
     public static boolean wasErr = false;
     public static String errMsg = null;
     public static char[] typchars = new char[]{' ', '$', '(', ')', '*', ',', '<', '>'};
+    public static String[] keywords = new String[]{"as", "break", "byref", "byval", "class", "continue", "else", "extends", "false", "for", "goto", "if", "implements", "imply", "interface", "jump", "null", "return", "struct", "structure", "this", "to", "true", "typealias", "typedef", "typefullalias", "while"};
     public static boolean isValidTypeChar(char test) {
         int min = 0;
         int max = typchars.length;
@@ -69,6 +74,24 @@ public class SDhulb { /*Built not to handle: non UTF-8 source files  */
             Fmt.printErr("must provide both source and destination");
             return;
         }
+        typlst.add("u8");
+        typlst.add("s8");
+        typlst.add("u16");
+        typlst.add("s16");
+        typlst.add("a16");
+        typlst.add("u32");
+        typlst.add("s32");
+        typlst.add("a32");
+        typlst.add("u64");
+        typlst.add("s64");
+        typlst.add("a64");
+        typlst.add("f32");
+        typlst.add("f64");
+        typlst.add("int");
+        typlst.add("uint");
+        typlst.add("sint");
+        typlst.add("addr");
+        typlst.add("float");
         Fmt.printOk("SOURCE: " + args[0] + " DESTINATION: " + args[1]);
         if (args[1].equalsIgnoreCase("-")) {
             ArrayList<Token<?>> res = SourceParser.parse(args[0]);
