@@ -14,3 +14,6 @@ comment
 20s64;
 99s16;
 30s8;
+s8;
+
+**u8 x = 0;
